fixed iframe size issue

--- a/_posts/2018-3-10-post1.md
+++ b/_posts/2018-3-10-post1.md
@@ -163,7 +163,8 @@ $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 
 >EMBEDING My 3D Models TOO!!!
 
-<div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/d19e4291dbf04d4f80dc687e5da7a1f1/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<div class="sketchfab-embed-wrapper"><iframe          src="https://sketchfab.com/models/d19e4291dbf04d4f80dc687e5da7a1f1/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true" style="overflow: hidden; height:480px; width: 100%; position: relative;"
+></iframe>
 
 <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
     <a href="https://sketchfab.com/models/d19e4291dbf04d4f80dc687e5da7a1f1?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">LOW-POLY-BED</a>
@@ -176,7 +177,6 @@ Now Finally!! Creating Canvas!! :-
 
 <style>
   .Canvas1 { width: inherit; position: relative; top: 0;}
-
 </style>
 
 <!-- <div id='canvas-holder' style="position: relative; width: inherit;">
