--- a/_posts/2018-3-10-post1.md
+++ b/_posts/2018-3-10-post1.md
@@ -11,18 +11,19 @@ p5js: true
 
 This is A Test Page
 
-in this test page we are going to be testing all the features of markdown file.
+in this test page we are going to be testing all the features that i need in my future blog!
 
 
-> Coloring texts...
-
+// Coloring texts...
 <h2 style="color:pink">An Exploration</h2>quite surface in my brain?
+
+// Dummy Text.
 
 There are a lot of techniques **out** there to help you remember this type of information. From Kwik Recall to experiential methods, from books by very smart people to emerging research suggesting undisturbed rest is the key to retaining new information, lots of folks offer strategies to boost memory, concentration, and recall. Some are well-rooted, peer-reviewed techniques while others are hacks based on individual experience. Both types can be helpful—and by all means, use them to your advantage.
 
 However, for me, it has been understanding what is behind the techniques—the foundation of memory—that has proven most beneficial for improving my ability to remember stuff. Getting to the psychological roots of memory has allowed me to adapt memory, concentration, and recall to my specific context.
 
-### Lists :
+// Lists :
 
 1. Apple
 2. Boston
@@ -30,7 +31,7 @@ However, for me, it has been understanding what is behind the techniques—the f
 4. dartmouth
 5. Elementary
 
-### **My Skills**:
+### **My Loves**:
 
 - Art
     - CGI
@@ -44,17 +45,10 @@ However, for me, it has been understanding what is behind the techniques—the f
 - And Many More!
 
 
-As Mrityunjay Said:
 
-> # I am A Research Scientist @ Google
+> # Lorem Doloro Sit @ Ipsum 
 > <i>currently Working on Optimizing Ensamble Methods
-> os that we can do lorem <br> sdkjfjlajsldkjf alsjdfl aksjdfl s adlfj l f  aksjd fl aks jdskf as
->  sadk fjlkasjdk fjakjsdlf kjsalkd fjkd f
->  askd flaf ksajlkdjfk slj fljakj d
-> f akdsjf kaslkk f
-> ds kafl asdf lsja ldkfjlskad jlf kajslkd fja j
->  kla jdslkf jas djfkadjsf lkj ldf j 
-> doing some thing great takes alot of courage and patience. but those who can dot that will never be the ones who dye for **`nothing`**..
+>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores ad dolor omnis earum aliquam. Inventore ex, at consequatur sapiente assumenda, nesciunt placeat doloribus enim aliquid maxime, esse eum temporibus perspiciatis.
 > <br>
 > <br>
 </i>
@@ -99,7 +93,7 @@ class foo():
 - [ ] this is an incomplete item
 
 
-> ### Tables
+> ### // Tables
 
 
 First Header | Second Header
@@ -147,7 +141,7 @@ aaaaand.... EMOGIES!!
 
 lorem iqsum
 
-// Using Latex Using Math Jas:
+// Latex Using Math Jas:
 
 $$ y=mx+c $$
 
@@ -156,7 +150,7 @@ quadratic polynomial:<br>
 $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 {: .align-right}
 
-> EMBEDING My Art:
+> EMBEDING My Art through link:
 
 <img src="https://cdnb.artstation.com/p/assets/images/images/011/782/419/large/mrityunjay-bhardwaj-final.jpg?1531376612">
 
@@ -192,3 +186,5 @@ Now Finally!! Creating Canvas!! :-
   src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script> -->
 
 <script src="{{site.baseurl}}/assets/js/my_js/testcanvas.js"></script>
+
+<hr>
