fixed blog and main

--- a/_posts/2002-3-2-post3.md
+++ b/_posts/2002-3-2-post3.md
@@ -1,9 +1,6 @@
 ---
-layout: single
-title : "this is another post"
-header:
-  teaser: "/assets/imgs/cd-art.jpg"
-  image: "/assets/imgs/cd-art.jpg"
+layout: posts
+title : "this is anotheost"
 tags: [alpha,beta,gama,doloro,sitcomd]
 title-seprator: "|"
 categories: jekyll posts
