--- a/_posts/2018-3-10-post1.md
+++ b/_posts/2018-3-10-post1.md
@@ -1,5 +1,5 @@
 ---
-# layout: posts
+layout: single 
 title : "this is a post"
 tags: [alpha]
 title-seprator: "|"
@@ -68,7 +68,6 @@ I think you should use an
 function foo(md){
     // this is fucking awesome!!
     let a = "awesome";
-
     return true;
 }
 
