--- a/_posts/2018-3-10-post1.md
+++ b/_posts/2018-3-10-post1.md
@@ -95,10 +95,10 @@ class foo():
 > ### // Tables
 
 
-First Header | Second Header
------------- | -------------
-Content from cell 1 | Content from cell 2
-Content in the first column | Content in the second column
+| First Header                | Second Header                |
+| --------------------------- | ---------------------------- |
+| Content from cell 1         | Content from cell 2          |
+| Content in the first column | Content in the second column |
 
 // Crossed out Work
 
