removed some posts

--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -8,6 +8,8 @@ permalink: /:categories/:title.html
 mathjax: true
 author-bio: false
 author_profile: false
+header:
+    teaser: /assets/imgs/posts_imgs/rnn_with_math/RNNunfolded.png
 ---
 
 Recurrent Neural Nets are one of the most crucial network architecture to understand in the field of deep learning and for good reason. today, when it comes to modelling sequential data our goto architecture is RNNs,weather it's predicting what are you going to type next or to create your own Siri,Alexa or even do some time series prediction like predicting stock prices etc…. in short… its important to understand it!
