--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -32,8 +32,8 @@ Some Notations:-
 
 $$ \text{S = State or hidden units}$$
 $$ \text{V = Weight Matrix b/w hidden unit and the output} $$
-$$ \text{W = Weight Matrix b/w S of current time step to S of time step}$$
-$$ \text{U =  Weight Matrix b/w x_i and s_i}$$
+$$ \text{W = Weight Matrix b/w }s_t \text{ and } s_{t+1} $$
+$$ \text{U =  Weight Matrix b/w } x_t \text{ and } s_t$$
 
 
 now that you understood what it means to be a dynamical system we can unfold the computation graph and see what is happening...
