--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -28,12 +28,12 @@ and if we were to represent it in computational graph it looks something like th
 <img src="{{site.url}}{{site.baseurl}}/assets/imgs/posts_imgs/rnn_with_math/RNNunfolded.png">
 
 
-Some Notations:-
+Some Notations:-<br>
 
-$$ \text{S = State or hidden units}$$
-$$ \text{V = Weight Matrix b/w hidden unit and the output} $$
-$$ \text{W = Weight Matrix b/w }s_t \text{ and } s_{t+1} $$
-$$ \text{U =  Weight Matrix b/w } x_t \text{ and } s_t$$
+- $$ s_t $$ = State or hidden units @ time step $$ (t) $$
+- $$ V $$ = Weight Matrix b/w hidden unit and the output 
+- $$ W $$ = Weight Matrix b/w hidden units 
+- $$ U $$ = Weight Matrix b/w input and $$ s_t $$
 
 
 now that you understood what it means to be a dynamical system we can unfold the computation graph and see what is happening...
