updated rnn article

--- a/_posts/2018-3-10-post1.md
+++ b/_posts/2018-3-10-post1.md
@@ -7,6 +7,8 @@ categories: jekyll posts
 permalink: /:categories/:title.html
 mathjax: true   
 p5js: true   
+header:
+    teaser: /assets/imgs/cd-art.jpg
 ---
 
 This is A Test Page
