add new post about lasvm-nc

--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -191,11 +191,11 @@ $$ { {\partial s_t} \over{\partial a_t} }
 =  (1-tanh^2(a_t))
 $$
 
-$${ {\partial a_t} \over{\partial W} }
-= { {\partial } \over{\partial W} }(b+ W*s_{t-1} + U*x_t)
+$${ {\partial a_t} \over{\partial U} }
+= { {\partial } \over{\partial U} }(b+ W*s_{t-1} + U*x_t)
 $$
 
-$${ {\partial a_t} \over{\partial W} }
+$${ {\partial a_t} \over{\partial U} }
 = (x_t)
 $$
 
@@ -252,3 +252,5 @@ $$ U_{\text{new}} = U_{\text{old}} + \alpha{ {\partial L} \over{\partial U} } $$
 
 
 Congratulations,now that you know how Recurrent Neural Network works internally/mathematically as well as intuitively...we can now worry about how to implement it... if you ask anyone in the industry they all say RNNs doesnt work as it is... in paper it is really great and this is how it works internall but in practice we need to do some modification in order to make it work and that we will do in the next part of this blog...
+
+
