new_post: svmwithsmo

--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -157,7 +157,7 @@ $${ {\partial L} \over{\partial W}} = { {\partial L} \over{\partial s_t} } * { {
 $${ {\partial L} \over{\partial U}} = { {\partial L} \over{\partial s_t} } * { {\partial s_t} \over{\partial U} }$$
 
 
--$${ {\partial L} \over{\partial V}}$$:-
+calculating,$${ {\partial L} \over{\partial V}}$$:
 
 $${ {\partial L} \over{\partial V}} = { {\partial L} \over{\partial o_t} } * { {\partial o_t} \over{\partial V} }$$
 
@@ -173,7 +173,7 @@ $$
 
 $${ {\partial L} \over{\partial V}} = (o_t - y_t) * s_t$$
 
--$$ { {\partial L} \over{\partial U} }$$
+calculating,$$ { {\partial L} \over{\partial U} }$$:
 
 $${ {\partial L} \over{\partial U}} = { {\partial L} \over{\partial s_t} } * { {\partial s_t} \over{\partial U} }$$
 
@@ -205,7 +205,7 @@ $$
 
 $${ {\partial L} \over{\partial U}} = (\kappa_t)*((1-tanh^2(a_t)) * (x_{t})) $$
 
--$$ { {\partial L} \over{\partial W}} $$:-
+calculating,$$ { {\partial L} \over{\partial W}} $$:
 
 
 $${ {\partial L} \over{\partial W}} = { {\partial L} \over{\partial s_t} } * { {\partial s_t} \over{\partial W} }$$
