added disqus comment section

--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -3,7 +3,7 @@ layout: single
 title : Understanding Recurrent Neural Nets
 tags  : [ML,DL,AI,RNN,neural-networks]
 title-seprator: "|"
-categories: blog MachineLearning
+categories: blog Artificial Intelligence MachineLearning
 permalink: /:categories/:title.html
 mathjax: true
 author-bio: false
