--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -3,13 +3,13 @@ layout: single
 title : Understanding Recurrent Neural Nets
 tags  : [ML,DL,AI,RNN,neural-networks]
 title-seprator: "|"
-categories: blog Artificial Intelligence MachineLearning
+categories: blog Artificial-Intelligence MachineLearning
 permalink: /:categories/:title.html
 mathjax: true
 author-bio: false
 author_profile: false
 header:
-    teaser: /assets/imgs/posts_imgs/rnn_with_math/RNNunfolded.png
+    teaser: /assets/imgs/posts_imgs/rnn_with_math/teaser/RNNunfolded.png
 ---
 
 Recurrent Neural Nets are one of the most crucial network architecture to understand in the field of deep learning and for good reason. today, when it comes to modelling sequential data our goto architecture is RNNs,weather it's predicting what are you going to type next or to create your own Siri,Alexa or even do some time series prediction like predicting stock prices etc…. in short… its important to understand it!
@@ -28,7 +28,7 @@ and if we were to represent it in computation graph it looks something like fig 
 now that you understood what it means to be a dynamic system we can unfold the computation graph and see what is happening...
 
 {: .text-center}
-<img src="{{site.url}}{{site.baseurl}}/assets/imgs/posts_imgs/rnn_with_math/rnn_dsys2unfold.jpg">
+<img src="{{site.url}}{{site.baseurl}}/assets/imgs/posts_imgs/rnn_with_math/body/rnn_dsys2unfold.jpg">
 <!-- <i style="font-size:15px">image source: WildML</i> -->
 <i style="font-size:15px">fig 1.1</i>
 <i style="font-size:15px">a. Dynamic System (left) b. unfolded RNN graph (right)</i>
