updated classical_ai post

--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -157,10 +157,8 @@ calculating,$$ { {\partial L} \over{\partial U} }$$:
 
 $$
 \begin{align}
-{ {\partial L} \over{\partial U}} &= { {\partial L} \over{\partial s_t} } * { {\partial s_t} \over{\partial U} }
+{ {\partial L} \over{\partial U}} &= { {\partial L} \over{\partial s_t} } * { {\partial s_t} \over{\partial U} } \\
 &= (\kappa_t) * { {\partial s_t} \over{\partial U} }
-\end{align}
-$$
 
 $${ {\partial s_t} \over{\partial U} }
 = { {\partial s_t} \over{\partial a_t} }*{ {\partial a_t} \over{\partial U} }
@@ -184,9 +182,10 @@ $$
 
 $${ {\partial s_t} \over{\partial U} }
 = (1- tanh^2(a_t))*(x_t)
-$$
 
-$${ {\partial L} \over{\partial U}} = (\kappa_t)*((1-tanh^2(a_t)) * (x_{t})) $$
+{ {\partial L} \over{\partial U}} &= (\kappa_t)*((1-tanh^2(a_t)) * (x_{t})) $$
+\end{align}
+$$
 
 calculating,$$ { {\partial L} \over{\partial W}} $$:
 
