--- a/_posts/2019-1-13-rnns.md
+++ b/_posts/2019-1-13-rnns.md
@@ -159,6 +159,8 @@ $$
 \begin{align}
 { {\partial L} \over{\partial U}} &= { {\partial L} \over{\partial s_t} } * { {\partial s_t} \over{\partial U} } \\
 &= (\kappa_t) * { {\partial s_t} \over{\partial U} }
+\end{align}
+$$
 
 $${ {\partial s_t} \over{\partial U} }
 = { {\partial s_t} \over{\partial a_t} }*{ {\partial a_t} \over{\partial U} }
@@ -182,10 +184,10 @@ $$
 
 $${ {\partial s_t} \over{\partial U} }
 = (1- tanh^2(a_t))*(x_t)
-
-{ {\partial L} \over{\partial U}} &= (\kappa_t)*((1-tanh^2(a_t)) * (x_{t})) $$
-\end{align}
 $$
+
+
+$$ {   {\partial L} \over{\partial U}} = (\kappa_t)*((1-tanh^2(a_t)) * (x_{t})) $$
 
 calculating,$$ { {\partial L} \over{\partial W}} $$:
 
